Fix tests, compilation issue